[package]
name = "typescript-transpiler-cli"
description = "TypeScript to Rust transpiler."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
typescript-transpiler = { path = "../transpiler" }
