[package]
name = "typescript-transpiler-playground"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
prettyplease = "0.2.16"
proc-macro2 = "1.0.79"
quote = "1.0.35"
swc_common = { version = "0.33.19", features = ["tty-emitter"] }
swc_ecma_parser = "0.143.9"
syn = { version = "2.0.53", features = ["extra-traits"] }
